Se terminó la aplicación, y se mejoró la busqueda agregando un index de manera dinámica a el arreglo de heroes en la aplicación

--- a/src/app/components/heroe-buscado/heroe-buscado.component.html
+++ b/src/app/components/heroe-buscado/heroe-buscado.component.html
@@ -8,14 +8,6 @@
   <hr>
   <p *ngIf='heroes.length == 0' class="animated fadeIn faster bg-info p-3"><a href="#" class="text-light">No existen heroes relacionados con su busqueda: {{cadena}}</a></p>
   <div class="card-columns">
-    <div class="card" *ngFor='let heroe of heroes; let i = index;'>
-      <img src="" class="card-img-top" [src]="heroe.img">
-      <div class="card-body">
-        <h5 class="card-title">{{ heroe.nombre }}</h5>
-        <p class="card-text"> {{heroe.bio }}</p>
-        <p class="card-text"><small class="text-muted"> {{ heroe.aparicion }} </small></p>
-        <button class="btn btn-outline-primary btn-block" (click)='getHeroe(i)'>Ver mas...</button>
-      </div>
-    </div>
+      <app-hero-card  [heroe]='heroe' [index]='heroe.index' *ngFor='let heroe of heroes;'></app-hero-card>
   </div>
 </div>
